# Ray-Tracer-Challenge

./: .gitignore  CMakeLists.txt
include/: ray.h  ray_tracer.h
include/canvas/: canvas.h
include/color/: color.h
include/intersection/: computations.h  intersection.h
include/light/: pointLight.h
include/matrix/: matrix.h  transformation.h
include/ray/: ray.h
include/shape/: material.h  shape.h
include/shape/cube/: cube.h
include/shape/pattern/: checker.h  gradient.h  pattern.h  ring.h  stripe.h
include/shape/plane/: plane.h
include/shape/sphere/: sphere.h
include/tuple/: tuple.h
include/world/: camera.h  world.h
src/: main.cpp  ray.cpp  ray.test.cpp  ray_tracer.cpp
src/canvas/: canvas.cpp  canvas.test.cpp
src/color/: color.cpp  color.test.cpp
src/intersection/: computations.cpp  intersection.cpp
src/light/: pointLight.cpp
src/matrix/: matrix.cpp  matrix.test.cpp  transformation.cpp  transformation.test.cpp
src/ray/: ray.cpp
src/shape/: material.cpp  shape.cpp
src/shape/cube/: cube.cpp
src/shape/pattern/: checker.cpp  gradient.cpp  pattern.cpp  ring.cpp  stripe.cpp
src/shape/plane/: plane.cpp
src/shape/sphere/: sphere.cpp
src/tuple/: tuple.cpp  tuple.test.cpp
src/world/: camera.cpp  world.cpp
tests/canvas/: canvas.test.cpp
tests/color/: color.test.cpp
tests/intersection/: computations.test.cpp  intersection.test.cpp
tests/light/: pointLight.test.cpp
tests/matrix/: matrix.test.cpp  transformation.test.cpp
tests/ray/: ray.test.cpp
tests/shape/: material.test.cpp  shape.test.cpp
tests/shape/cube/: cube.test.cpp
tests/shape/pattern/: pattern.test.cpp
tests/shape/plane/: plane.test.cpp
tests/shape/sphere/: sphere.test.cpp
tests/tuple/: tuple.test.cpp
tests/world/: camera.test.cpp  world.test.cpp
